# v2v-rs

./: .gitignore  LICENSE  README.md  TUTORIAL.md
python script/: main.py  requirements.txt
scripts/: menu-firmware.ps1  run-firmware.cmd  run-firmware.ps1  run-firmware.sh
v2v_gateway/: Cargo.toml
v2v_gateway/.cargo/: config.toml
v2v_sniffer/: Cargo.toml
v2v_sniffer/src/: lib.rs
v2v_system/: Cargo.toml
v2v_system/.cargo/: config.toml
v2v_transceiver/: Cargo.toml
v2v_transceiver/src/: lib.rs  message.rs
