[package]
edition      = "2024"
name         = "v2v_sniffer"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "v2v_sniffer"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.1.0", features = ["unstable"] }

esp-rtos = { version = "0.3.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
] }
esp-bootloader-esp-idf = { version = "0.5.0", features = [] }
esp-alloc = "0.10.0"
esp-backtrace = { version = "0.19.0", features = [
  "panic-handler",
  "println",
] }
esp-println = { version = "0.17.0", features = [] }
embassy-time = "0.5.0"
esp-radio = { version = "0.18.0", features = [
  "esp-alloc",
  "unstable",
  "wifi",
  "esp-now"
] }
embassy-executor = "0.10.0"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
postcard = { version = "1.1.3", features = ["experimental-derive"] }
libm = "0.2.16"
minicbor = { version = "2.2.2", default-features = false, features = ["derive"] }

[features]
default = ["esp32c6"]

# ESP32 (original)
esp32 = [
  "esp-hal/esp32",
  "esp-rtos/esp32",
  "esp-bootloader-esp-idf/esp32",
  "esp-backtrace/esp32",
  "esp-println/esp32",
  "esp-radio/esp32",
]

# ESP32-S2
esp32s2 = [
  "esp-hal/esp32s2",
  "esp-rtos/esp32s2",
  "esp-bootloader-esp-idf/esp32s2",
  "esp-backtrace/esp32s2",
  "esp-println/esp32s2",
  "esp-radio/esp32s2",
]

# ESP32-S3
esp32s3 = [
  "esp-hal/esp32s3",
  "esp-rtos/esp32s3",
  "esp-bootloader-esp-idf/esp32s3",
  "esp-backtrace/esp32s3",
  "esp-println/esp32s3",
  "esp-radio/esp32s3",
]

# ESP32-C3
esp32c3 = [
  "esp-hal/esp32c3",
  "esp-rtos/esp32c3",
  "esp-bootloader-esp-idf/esp32c3",
  "esp-backtrace/esp32c3",
  "esp-println/esp32c3",
  "esp-radio/esp32c3",
]

# ESP32-C6
esp32c6 = [
  "esp-hal/esp32c6",
  "esp-rtos/esp32c6",
  "esp-bootloader-esp-idf/esp32c6",
  "esp-backtrace/esp32c6",
  "esp-println/esp32c6",
  "esp-radio/esp32c6",
]

# ESP32-C5
esp32c5 = [
  "esp-hal/esp32c5",
  "esp-rtos/esp32c5",
  "esp-bootloader-esp-idf/esp32c5",
  "esp-backtrace/esp32c5",
  "esp-println/esp32c5",
  "esp-radio/esp32c5",
]

# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
